--- a/style.css
+++ b/style.css
@@ -3,12 +3,18 @@
   padding: 0;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
 .container-out {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 3rem;
   width: 50%;
   border: 2px solid black;
   padding: 5px;
@@ -23,10 +29,10 @@
   display: flex;
   align-items: center;
   height: 6vh;
-  margin: 0px auto;
+  margin: 0 auto;
   border: 2px solid black;
   font-size: 0.7rem;
-  padding: 0px 7px 0px 10px;
+  padding: 0 7px 0 10px;
 }
 
 .awesome-books {
@@ -51,11 +57,12 @@ a {
   font-size: 0.7rem;
   align-self: flex-end;
   margin-top: 2px;
+  margin-bottom: 3px;
 }
 
 .heading {
   font-size: 1rem;
-  margin: 10px 0px;
+  margin: 10px 0;
 }
 
 .container {
@@ -123,13 +130,14 @@ hr {
   box-shadow: 1px 3px;
   align-self: flex-end;
 }
+
 .footer {
   width: 100%;
   border: 2px solid black;
   margin-top: 5%;
   display: flex;
   align-items: center;
-  padding: 5px 0px;
+  padding: 5px 0;
 }
 
 .copyright {
@@ -139,4 +147,41 @@ hr {
 
 span {
   margin-left: 25%;
+}
+
+.hide {
+  display: none;
+}
+
+.pressed {
+  color: blue;
+}
+
+.blue {
+  color: blue;
+}
+
+.contactdetail {
+  margin-top: 5%;
+  width: 95%;
+}
+
+.contact {
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+.contactparagraph {
+  text-align: left;
+  width: 70%;
+  margin: 0% auto 3% auto;
+}
+
+.contactcontainer {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.containinfo {
+  width: 100%;
 }
